--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" id="blank" required="required" placeholder="Username" maxlength=12>
                     <input type="password" id="blank" required="required" placeholder="Password">
                     <input type="submit" value="Login" id="btn">
-                    <a href="#">Forgot Password? <span>Click Here!</span></a>
+                    <a href="forgot_password.html">Forgot Password? <span>Click Here!</span></a>
                 </form>
             </div>
             <div class="signupForm">
