--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Login Page with a Matrix Rain made from scratch">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/a10bb03e8b.js" crossorigin="anonymous"></script>
     <title>Matrix | Login Page</title>
@@ -16,30 +17,30 @@
         <div class="loginbG">
             <div class="box login">
                 <h2>Already have an Account ?</h2>
-                <span class="signin">Login <i class="fa-solid fa-arrow-right"></i></span>
+                <span class="signin">Login <i class="fa-solid fa-arrow-right" id="rotate"></i></span>
             </div>
             <div class="box signup">
                 <h2>Dont have an Account ?</h2>
-                <span class="signup">Sign Up <i class="fa-solid fa-arrow-right"></i></span>
+                <span class="signup">Register <i class="fa-solid fa-arrow-right"></i></span>
             </div>
         </div>
-        <div class="formbG">
+        <div class="formbG" id="formbG">
             <div class="loginForm">
                 <form>
                     <h3>Login</h3>
-                    <input type="text" id="blank" required="required" placeholder="Username" maxlength=12>
+                    <input type="text" id="blank" required="required" placeholder="Username">
                     <input type="password" id="blank" required="required" placeholder="Password">
                     <input type="submit" value="Login" id="btn">
-                    <a href="forgot_password.html">Forgot Password? <span>Click Here!</span></a>
+                    <a href="Reset Password/forgot_password.html">Forgot Password? <span>Click Here!</span></a>
                 </form>
             </div>
             <div class="signupForm">
                 <form>
                     <h3>Sign Up</h3>
-                    <input type="text" id="blank" required="required" placeholder="Choose a Username">
-                    <input type="text" id="blank" required="required" placeholder="Email">
-                    <input type="password" id="blank" required="required" placeholder="Password">
-                    <input type="submit" value="Sign Up" id="btn">
+                    <input type="text" id="blank" required="required" placeholder="Choose a Username" class="one">
+                    <input type="text" id="blank" required="required" placeholder="Email" class="two">
+                    <input type="password" id="blank" required="required" placeholder="Password" class="three">
+                    <input type="submit" value="Sign Up" id="btn" class="four">
                 </form>
             </div>
         </div>
