--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <input type="text" id="blank" required="required" placeholder="Username">
                     <input type="password" id="blank" required="required" placeholder="Password">
                     <input type="submit" value="Login" id="btn">
-                    <a href="Reset Password/forgot_password.html">Forgot Password? <span>Click Here!</span></a>
+                    <a href="forgot_password.html">Forgot Password? <span>Click Here!</span></a>
                 </form>
             </div>
             <div class="signupForm">
