final html commit

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="loginbG">
             <div class="box login">
                 <h2>Already have an Account ?</h2>
-                <span class="signin">Login <i class="fa-solid fa-arrow-right" id="rotate"></i></span>
+                <span class="signin"><i class="fa-solid fa-arrow-right" id="rotate"></i></span>
             </div>
             <div class="box signup">
                 <h2>Dont have an Account ?</h2>
-                <span class="signup">Register <i class="fa-solid fa-arrow-right"></i></span>
+                <span class="signup"><i class="fa-solid fa-arrow-right"></i></span>
             </div>
         </div>
         <div class="formbG" id="formbG">
@@ -40,7 +40,9 @@
                     <input type="text" id="blank" required="required" placeholder="Choose a Username" class="one">
                     <input type="text" id="blank" required="required" placeholder="Email" class="two">
                     <input type="password" id="blank" required="required" placeholder="Password" class="three">
-                    <input type="submit" value="Sign Up" id="btn" class="four">
+                    <input type="text" id="blank" placeholder="First Name" class="four">
+                    <input type="text" id="blank" placeholder="Last Name" class="five">
+                    <input type="submit" value="Sign Up" id="btn" class="six">
                 </form>
             </div>
         </div>
